--- a/service/pom.xml
+++ b/service/pom.xml
@@ -10,8 +10,9 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>2.3.2</version>
         <configuration>
-          <source>1.6</source>
-          <target>1.6</target>
+          <source>1.7</source>
+          <target>1.7</target>
+          <debug>true</debug>
           <compilerArgument></compilerArgument>
         </configuration>
       </plugin>
@@ -42,7 +43,7 @@
               <transformers>
                 <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                  <mainClass>org.tarent.cvio.server.CVService</mainClass>
+                  <mainClass>org.tarent.cvio.server.CVIO</mainClass>
                 </transformer>
               </transformers>
             </configuration>
@@ -53,6 +54,11 @@
   </build>
 
   <dependencies>
+    <dependency>
+      <groupId>org.elasticsearch</groupId>
+      <artifactId>elasticsearch</artifactId>
+      <version>1.0.0</version>
+    </dependency>
     <dependency>
       <groupId>joda-time</groupId>
       <artifactId>joda-time</artifactId>
