--- a/service/pom.xml
+++ b/service/pom.xml
@@ -1,6 +1,6 @@
 <project>
   <modelVersion>4.0.0</modelVersion>
-  <groupId>org.tarent.cvmanager</groupId>
+  <groupId>org.tarent.cvio</groupId>
   <artifactId>cvserver</artifactId>
   <version>0.1.0</version>
   
