--- a/pom.xml
+++ b/pom.xml
@@ -86,5 +86,10 @@
       <artifactId>dropwizard-core</artifactId>
       <version>0.6.2</version>
     </dependency>
+    <dependency>
+      <groupId>com.yammer.dropwizard</groupId>
+      <artifactId>dropwizard-auth-ldap</artifactId>
+   	  <version>0.0.19</version>
+	</dependency>
   </dependencies>
 </project>
