fixed list resources to return all documents

--- a/config.yaml
+++ b/config.yaml
@@ -8,6 +8,7 @@ elasticsearchBindHost: 127.0.0.1
 
 elasticsearchEnableHttp: true
 
+defaultEsFetchSize: 500
 
 
 ####################################
