--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,7 @@
   
   <build>
     <plugins>
+        
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
         <version>2.3.2</version>
@@ -16,6 +17,7 @@
           <compilerArgument></compilerArgument>
         </configuration>
       </plugin>
+      
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-shade-plugin</artifactId>
@@ -50,6 +52,7 @@
           </execution>
         </executions>
       </plugin>
+    
     </plugins>
   </build>
 
@@ -98,4 +101,36 @@
    	  <version>0.0.19</version>
 	</dependency>
   </dependencies>
+  
+  <profiles>
+	   <!-- Profile to build the cvio deb package -->
+	   <profile>
+	       <id>build-debian-package</id>
+	       <build>
+				<plugins>
+				    <plugin>
+					    <groupId>org.codehaus.mojo</groupId>
+		        		<artifactId>exec-maven-plugin</artifactId>
+		        		<version>1.2.1</version>
+		        		<executions>
+		        		    <execution>
+								<id>execute build of debian package</id>
+		        		        <phase>package</phase>
+								<goals>
+								    <goal>
+								        exec
+								    </goal>
+								</goals>
+								<configuration>
+									<executable>dpkg-buildpackage</executable>
+									<sucessCodes>1</sucessCodes>	    
+								</configuration>
+		        		    </execution>
+		        		</executions>
+					</plugin>
+				</plugins>
+	       </build>
+	   </profile>
+  </profiles>
+  
 </project>
