--- a/pom.xml
+++ b/pom.xml
@@ -54,7 +54,8 @@
         </executions>
       </plugin>
       
-      <!-- JavaScrpt unit testing with karma -->
+      <!-- JavaScript unit testing with karma 
+      This does not work on our bm-master, currently
       <plugin>
         <groupId>com.kelveden</groupId>
         <artifactId>maven-karma-plugin</artifactId>
@@ -74,45 +75,7 @@
           <autoWatch>false</autoWatch>
         </configuration>
       </plugin>
- 
- 
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-antrun-plugin</artifactId>
-        <version>1.7</version>
- 
-        <executions>
-          <execution>
-            <id>npm-install</id>
-            <phase>initialize</phase>
-            <goals> <goal>run</goal> </goals>
- 
-            <configuration>
-              <target>
-                <exec executable="cmd" dir="${basedir}" osfamily="windows"
-                    failonerror="true">
-                  <arg line="/c npm config set color false"/>
-                </exec>
-                <exec executable="bash" dir="${basedir}" osfamily="unix"
-                    failonerror="true">
-                  <arg line="npm config set color false"/>
-                </exec>
- 
-                <exec executable="cmd" dir="${basedir}" osfamily="windows"
-                    failonerror="true">
-                  <arg line="/c npm install"/>
-                </exec>
-                <exec executable="bash" dir="${basedir}" osfamily="unix"
-                    failonerror="true">
-                  <arg line="npm install"/>
-                </exec>
-              </target>
-            </configuration>
-          </execution>
- 
-        </executions>
-      </plugin>
- 
+      -->
     
     </plugins>
   </build>
