[cvio] add basic authentification + protecting resources

--- a/config.yaml
+++ b/config.yaml
@@ -8,6 +8,9 @@ elasticsearchEnableHttp: true
 
 defaultEsFetchSize: 500
 
+defaultUser: changeit
+
+defaultPW: changeit
 
 ####################################
 ## Dropwizard options (some of them)             
