--- a/pom.xml
+++ b/pom.xml
@@ -129,6 +129,11 @@
 		<artifactId>json-simple</artifactId>
 		<version>1.1.1</version>
 	</dependency>
+	<dependency>
+	   <groupId>net.sf.jodreports</groupId>
+	   <artifactId>jodreports</artifactId>
+	   <version>2.4.0</version>
+	</dependency>
   </dependencies>
   
   <profiles>
