--- a/pom.xml
+++ b/pom.xml
@@ -131,7 +131,7 @@
 	<dependency>
 	   <groupId>net.sf.jodreports</groupId>
 	   <artifactId>jodreports</artifactId>
-	   <version>2.4.0</version>
+	   <version>2.4.1-SNAPSHOT</version>
 	</dependency>
   </dependencies>
   
